--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <div class="line line2"></div>
           <div class="line line3"></div>
       </div> -->
-      <!-- <img src="./img/hamburger.png" alt="hamburger"> -->
       <div class="logo font-primary"><h2><span class="text-primary">Book</span>House</h2></div>
       <ul id="left-navbar" class=" font-uppercase text-dark">
+        <li class="nav-item"> <img src="./img/hamburger.png" alt="hamburger"></li>
         <li class="nav-item"><a href="#">Collection</a></li>
         <li class="nav-item"><a href="#">Top selling</a></li>
         <li class="nav-item"><a href="#"><i class="fas fa-search"></i></a></li>
@@ -62,6 +62,10 @@
         <a class="btn-trans btn-primary" href="#"><i class="fas fa-shopping-bag"></i>Add to cart</a>
       </div>
     </div>
+  </section>
+
+  <section id="">
+    
   </section>
 </body>
 </html>
