--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat+Alternates&display=swap" rel="stylesheet">
   <title>BookHouse</title>
 </head>
@@ -64,8 +65,32 @@
     </div>
   </section>
 
-  <section id="">
-    
+  <section id="two-books">
+    <div class="book1">
+      <div class="book1-img"></div>
+      <div class="book1-info">
+        <h2 class="book-title1 font-primary">
+          Don't Make me <br> Think
+        </h2>
+        <p><span class="text-light">By</span><span class="text-subtitle"> Steve Krug</span></p>
+        <div class="sm-price"><p class="s-price-yellow">$32.75</p>
+        <p class="s-price-cut">$37.90</p></div> 
+        <div class="font-uppercase"><a class="btn" href="#">Add to cart</a></div>
+      </div>
+    </div>
+
+      <div class="book2">
+        <div class="book2-img"></div>
+        <div class="book1-info">
+          <h2 class="book-title2 font-primary book2-color">
+            The Joy of UX
+          </h2>
+          <p><span class="text-light">By</span><span class="text-subtitle"> David Platt</span></p>
+          <div class="sm-price"><p class="s-price-red">$32.75</p>
+          <p class="s-price-cut">$37.90</p></div> 
+          <div class="font-uppercase"><a class="btn" href="#">Add to cart</a></div>
+      </div>
+    </div>
   </section>
 </body>
 </html>
