--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="award-img"></div>
       <div class="award-info">
-        <h2 class="sect-title">EVil  Overdue Life of <br>Amy byler</h2>
+        <h2 class="sect-title">Evil  Overdue Life of <br>Amy byler</h2>
         <p class="text-subtitle text-subtitle-top">Tommy Orange</p>
         <div class="sm-price"><p class="s-price-red">$16.79</p></div>
       </div>
@@ -158,25 +158,77 @@
       </div>
       <div id="deals-img"></div>
       <div class="award-info">
-        <h2 class="sect-title">Evil America</h2>
-        <p class="text-subtitle text-subtitle-top">Tommy Orange</p>
-        <div class="sm-price"><p class="s-price-yellow">$16.79</p></div>
+        <h2 class="sect-title-deals">Evil America</h2>
+        <p class="text-subtitle text-subtitle-top">Ben Shaprio</p>
+        <div class="sm-price">
+          <p class="s-price-yellow">$7.99</p>
+          <p class="s-price-cut">$16.80</p></div>
       </div>
-        </div>
+    </div>
 
-      <div class="award-winners">
+      <div class="top-rated">
         <div class="btn-sect">
-           <a href="#" class="btn-awards">Awards Winners</a>
+           <a href="#" class="btn-rated">Top rated</a>
         </div>
         <div id="rated-img"></div>
         <div class="award-info">
-          <h2 class="sect-title">The Overdue Life of <br> Amy byler</h2>
-          <p class="text-subtitle text-subtitle-top">Tommy Orange</p>
-          <div class="sm-price"><p class="s-price-red">$16.79</p></div>
+          <h2 class="sect-title-rated">Educated: A Memoir</h2>
+          <p class="text-subtitle text-subtitle-top">Tara Westover</p>
+          <div class="sm-price"><p class="s-price-red">$11.94</p></div>
           </div>
       </div>
-    
-    
+  </section>
+
+  <!-- TOP AUTHORS -->
+
+  <section id="authors">
+    <div class="top-bar">
+      <h1 class="title-authors">Top Authors</h1>
+      <p class="s-price-orange">View all</p>
+    </div>   
+    <div class="authors">      
+      <div class="author1">
+        <div class="author1-img"></div>
+        <h2 class="text-subtitle text-subtitle-b">Eddie Lobanovskiy</h2>
+        <p class="text-light">64 Books</p>
+      </div>
+      <div class="author2">
+        <div class="author2-img"></div>
+        <h2 class="text-subtitle">Uran Khan</h2>
+        <p class="text-light">54 Books</p>
+      </div>
+      <div class="author3">
+        <div class="author3-img"></div>
+        <h2 class="text-subtitle">CRI$$ johns</h2>
+        <p class="text-light">29 Books</p>
+      </div>
+      <div class="author4">
+        <div class="author4-img"></div>
+        <h2 class="text-subtitle">Mohammed sajid</h2>
+        <p class="text-light">45 Books</p>
+      </div>
+      <div class="author5">
+        <div class="author5-img"></div>
+        <h2 class="text-subtitle">George Bokhua</h2>
+        <p class="text-light">37 Books</p>
+      </div>
+      <div class="author6">
+        <div class="author6-img"></div>
+        <h2 class="text-subtitle">Nata Schepy</h2>
+        <p class="text-light">21 Books</p>
+      </div>
+    </div>
+  </section>
+
+  <footer id="main-ftr">
+    <div class="subscribe">
+      <h1>Subscribe to newsletter</h1>
+      <form>
+        <input type="email" name="email" placeholder="You@example.com">
+        <input type="submit" class="btn-submit" value="Subscribe">
+      </form>
+    </div>
+  </footer>
 
 </body>
 </html>
