--- a/index.html
+++ b/index.html
@@ -222,12 +222,65 @@
 
   <footer id="main-ftr">
     <div class="subscribe">
-      <h1>Subscribe to newsletter</h1>
-      <form>
-        <input type="email" name="email" placeholder="You@example.com">
-        <input type="submit" class="btn-submit" value="Subscribe">
-      </form>
+      <div class="form-group">
+        <h1 class="subscribe-heading">Subscribe to newsletter</h1>
+        <form>
+          <input type="email" name="email" placeholder="You@example.com">
+          <input type="submit" class="btn-submit" value="Subscribe">
+        </form>
+      </div>
     </div>
+
+    <div class="last-ftr">
+      <div class="column">
+        <div class="logo font-primary"><h1><span class="text-primary">Book</span>House</h1></div>
+        <div class="btns-last">
+          <a href="#" class="btn-trans">
+          <i class="fas fa-globe"></i>English</a>
+          <a href="#" class="btn-trans">$ - USD - US Dollar</a>
+        </div>      
+     </div>
+
+     <div class="column">
+        <h2 class = "h2-ftr">Home</h2>
+        <p class="p-ftr">Books</p>
+        <p class="p-ftr">Electronics</p>
+        <p class="p-ftr">Accessories</p>
+        <p class="p-ftr">Gift card</p>
+        <p class="p-ftr">Stationary</p>
+    </div>
+
+     <div class="column">
+        <h2 class = "h2-ftr">Shop By</h2>
+        <p class="p-ftr">Book Category</p>
+        <p class="p-ftr">Electronics Category</p>
+        <p class="p-ftr">Book Mela 2019</p>
+        <p class="p-ftr">Pre Order</p>
+        <p class="p-ftr">Foreign Books</p>
+        <p class="p-ftr">Best Selling</p>
+    </div>
+
+     <div class="column">
+        <h2 class = "h2-ftr">Products</h2>
+        <a href="#" class="p-ftr">Clock</a>
+        <p class="p-ftr">Brands</p>
+        <p class="p-ftr">Authors</p>
+        <p class="p-ftr">Publishers</p>
+        <p class="p-ftr">List</p>
+        <p class="p-ftr">Reviews</p>
+        <p class="p-ftr">Q&A</p>
+    </div>
+
+     <div class="column">
+        <h2 class = "h2-ftr">Support</h2>
+        <p class="p-ftr">Order Track</p>
+        <p class="p-ftr">Contact Us</p>
+        <p class="p-ftr">Find My Product</p>
+        <p class="p-ftr">Guide</p>
+        <p class="p-ftr">FAQ</p>
+        <p class="p-ftr">Help Desk</p>
+    </div>
+    
   </footer>
 
 </body>
