--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/new-style.css">
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat+Alternates&display=swap" rel="stylesheet">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="./css/mobile.css">
   <title>BookHouse</title>
 </head>
 <body>
   <header id="main-header">
     <div class="logo font-primary"><h1><span class="text-primary">Book</span>House</h1></div>
     <ul id="left-navbar" class=" font-uppercase text-dark">
-      <li class="nav-item"> <img src="./img/hamburger.png" alt="hamburger"></li>
+      <li class="nav-item">
+        <img src="./img/hamburger.png" alt="hamburger">
+      </li>
       <li class="nav-item"><a href="#">Collection</a></li>
       <li class="nav-item"><a href="#">Top selling</a></li>
       <li class="nav-item"><a href="#"><i class="fas fa-search"></i></a></li>
