--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
 
     <div class="last-ftr">
-      <div class="column">
+      <div class="column1">
         <div class="logo font-primary"><h1><span class="text-primary">Book</span>House</h1></div>
         <div class="btns-last">
           <a href="#" class="btn-trans">
